--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1839,6 +1839,7 @@ input, select, textarea {
 		box-sizing: border-box;
 		padding: 1em 0;
 	}
+	
 
 	.tech-list--item:hover {
 		transform: scale(1.1);
@@ -2069,6 +2070,13 @@ input, select, textarea {
 		.features section {
 			padding: 3.6em 3em 1em 7em ;
 			width: 50%;
+			border-top: solid 1px rgba(255, 255, 255, 0.15);
+			position: relative;
+		}
+
+		.features2 section {
+			padding: 3.6em 3em 1em 7em ;
+			width: 100%;
 			border-top: solid 1px rgba(255, 255, 255, 0.15);
 			position: relative;
 		}
